[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Levels/MainMenuLevel/BuildRootMenuView/BuildRootMenuView.gd" type="Script" id=1]
[ext_resource path="res://fonts/Coaster Quake - Personal Use.otf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/FontAwesome/fontawesome-webfont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/FontAwesome/FontAwesome.gd" type="Script" id=4]
[ext_resource path="res://src/Levels/MainMenuLevel/main_menu_theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[node name="BuildRootMenuView" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -226.0
margin_right = 226.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
text = "Select Level To Build"

[node name="BackButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = 64.0

[node name="FontAwesome" type="Label" parent="BackButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.5
margin_top = -16.5
margin_right = 13.5
margin_bottom = 16.5
custom_fonts/font = SubResource( 2 )
text = "ÔÅ†"
script = ExtResource( 4 )
size = 32
icon = "arrow-left"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -400.0
margin_right = 500.0
margin_bottom = 400.0

[node name="LevelContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1000.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewLevelButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -64.0
margin_right = 500.0

[node name="Label" type="Label" parent="NewLevelButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "New Level"
align = 1
valign = 1
[connection signal="pressed" from="BackButton" to="." method="_back_button"]
